--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,16 +5,16 @@
         <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    {# CODE DE DÉPART AVANT MODIFICATIONS :
-    <form action="{{ path('login_check') }}" method="post"> 
-    #}
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Nom d'utilisateur :</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+<div class="center-box">     
+    <form action="{{ path('login_check') }}" method="post">
 
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="_password" />
+        <input placeholder="NOM" type="text" id="username" name="_username" value="{{ last_username }}" required />
+
+        <input placeholder="MOT DE PASSE" type="password" id="password" name="_password" required />
+
+        <div class="regular-spacer"></div>
 
         <button class="btn btn-success" type="submit">Se connecter</button>
     </form>
+</div>
 {% endblock %}
