--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -1,36 +1,94 @@
 {% extends 'base.html.twig' %}
 
-{% block header_img %}<img class="slide-image" src="{{ asset('img/todolist_content.jpg') }}" alt="todo list">{% endblock %}
+{# {% block header_img %}<img class="slide-image" src="{{ asset('img/todolist_content.jpg') }}" alt="todo list" title="todo list">{% endblock %} #}
+
+{% block header_img %}{% endblock %}
 
 {% block body %}
-  {#   <a href="{{ path('task_create') }}" class="btn btn-info pull-right">Créer une tâche</a>
+
+<!-- AJOUTÉ POUR SWITCHER ENTRE L'AFFICHAGE DE TOUTES LES TÂCHES ET L'AFFICHAGE DES TÂCHES TERMINÉES -->
+{% if 'task_list' == app.request.attributes.get('_route') %}
+    
+    <div class="center-box">
+        <a href="{{ path('task_create') }}" class="btn btn-info" style="margin-bottom:10px;">Créer une tâche</a>
+        <a href="{{ path('task_done') }}" class="btn btn-secondary" style="margin-bottom:10px;">Tâches terminées</a>
+    </div>
+
+    <h1 class="center-box special-title">Liste des tâches</h1>
+
+{% endif %}
+
+{% if 'task_done' == app.request.attributes.get('_route') %}
+    
+    <div class="center-box">
+        <a href="{{ path('task_list') }}" class="btn btn-secondary" style="margin-bottom:10px;">Consulter toutes les tâches</a>
+    </div>
+
+    <h1 class="center-box special-title">Liste des tâches terminées</h1>
+
+{% endif %}
+
     <div class="row">
         {% for task in tasks %}
         <div class="col-sm-4 col-lg-4 col-md-4">
             <div class="thumbnail">
-                <div class="caption">
+                <div class="caption" style="height:210px;padding:10px;">
                     <h4 class="pull-right">
                         {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span class="glyphicon glyphicon-remove"></span>{% endif %}
                     </h4>
-                    <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a></h4>
+
+                    <div class="regular-spacer"></div>
+                    <div class="regular-spacer"></div>
+
+                    <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title|upper|raw }}</a></h4>
+
+                    <!-- AJOUTÉ POUR IDENTIFIER L'AUTEUR DE LA TÂCHE -->
+                    <!-- AJOUTÉES : DATES DE CRÉATION ET DE MISE À JOUR -->
+                    {# {% if task.user.username != 'Anonyme' %} #}
+                    {# {% if task.usertodo.id != 2 %} #}
+                    {% if (task.usertodo.id != 2) and (task.freshDate is null) %}
+                        <p class="task-infos">PAR {{ task.usertodo.username|upper|raw }} &bull; LE {{ task.createdAt|date('d/m/Y')|raw }}</p>
+                    {% endif %}
+
+                    {% if (task.usertodo.id != 2) and (task.freshDate is not null) %}
+                        <p class="task-infos">PAR {{ task.usertodo.username|upper|raw }} &bull; MIS À JOUR LE {{ task.freshDate|date('d/m/Y')|raw }}</p>
+                    {% endif %}
+
+                    {% if (task.usertodo.id == 2) and (task.freshDate is not null) %}
+                        <p class="task-infos">MIS À JOUR LE {{ task.freshDate|date('d/m/Y')|raw }}</p>
+                    {% endif %}
+
                     <p>{{ task.content }}</p>
+
                 </div>
-                <div>
+                <div class="center-box">
                     <form action="{{ path('task_toggle', {'id' : task.id }) }}">
-                        <button class="btn btn-success btn-sm pull-right">
+                        <button class="btn btn-success btn-sm">
                             {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
                         </button>
                     </form>
-                    <form action="{{ path('task_delete', {'id' : task.id }) }}">
+
+                    <!-- AJOUTÉ POUR N'AUTORISER QUE LES AUTEURS DES TÂCHES À SUPPRIMER LEURS TÂCHES OU POUR N'AUTORISER QUE LES UTILISATEURS AYANT LE ROLE ADMIN -->
+                    {# {% if app.user and (app.user.role == 'ROLE_ADMIN' or app.user == task.user) %} #}
+                    {# {% if is_granted('ROLE_ADMIN') or app.user == task.user %} #}
+                    {% if is_granted('ROLE_ADMIN') or app.user.id == task.usertodo.id %}
+                        <form action="{{ path('task_delete', {'id' : task.id }) }}">
+                            <button class="btn btn-danger btn-sm" onclick="return(confirm('Validez-vous ce choix ?'));">Supprimer</button>
+                        </form>
+                    {% endif %}
+                    {# <form action="{{ path('task_delete', {'id' : task.id }) }}">
                         <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
-                    </form>
+                    </form> #}
+
+                    <div class="regular-spacer"></div>
+
                 </div>
             </div>
         </div>
         {% else %}
             <div class="alert alert-warning" role="alert">
-                Il n'y a pas encore de tâche enregistrée. <a href="{{ path('task_create') }}" class="btn btn-warning pull-right">Créer une tâche</a>
+                Il n'y a pas encore de tâche enregistrée sur cette page.
             </div>
         {% endfor %}
-    </div> #}
+    </div>
 {% endblock %}
