--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,14 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block header_title %}<h1>Modifier <strong>{{ user.username }}</strong></h1>{% endblock %}
+{% block header_title %}<h1 class="center-box special-title">Modifier <strong>{{ user.username }}</strong></h1>{% endblock %}
+
 {% block header_img %}{% endblock %}
 
 {% block body %}
-    {# <div class="row">
+    <div class="row center-box">
         {{ form_start(form, {'action' : path('user_edit', {'id' : user.id})}) }}
         {{ form_widget(form) }}
 
-        <button type="submit" class="btn btn-success pull-right">Modifier</button>
+        <button type="submit" class="btn btn-success">Modifier</button>
         {{ form_end(form) }}
-    </div> #}
+    </div>
 {% endblock %}
