--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -2,10 +2,10 @@
 
 {% block header_img %}{% endblock %}
 
-{% block header_title %}<h1>Liste des utilisateurs</h1>{% endblock %}
+{% block header_title %}<h1 class="special-title">Liste des utilisateurs</h1>{% endblock %}
 
 {% block body %}
-   {#  {% if users|length == 0 %}
+    {% if users|length == 0 %}
         <div class="alert alert-warning" role="alert">
             Il n'y a pas encore d'utilisateur enregistré. <a href="{{ path('user_create') }}" class="btn btn-warning pull-right">Créer un utilisateur</a>
         </div>
@@ -14,25 +14,53 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>#</th>
+                    {# <th>#</th> #}
                     <th>Nom d'utilisateur</th>
-                    <th>Adresse d'utilisateur</th>
+                    <th>Rôle</th>
+                    <th>Adresse mail</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for user in users %}
+                    <!-- AJOUTÉ : EMPÊCHE L'ACCÈS AUX MODIFICATIONS DE L'UTILISATEUR ANONYME + DU MANAGER AVEC LE ROLE_SUPER_ADMIN + DU MEMBRE CONNECTÉ (QUI NE PEUT PAS MODIFIER SON PROPRE COMPTE) -->
+                    {% if (user.role != 'ROLE_SUPER_ADMIN') and (user.id != 2) and (app.user.id != user.id) %}
                     <tr>
-                        <th scope="row">{{ loop.index }}</th>
+                        {# <th scope="row">{{ loop.index }}</th> #}
                         <td>{{ user.username }}</td>
+                        
+                        <!-- AJOUTÉ : INFORMATIONS SUR LES RÔLES -->
+                        {% if user.role == 'ROLE_USER' %}
+                            <td>Utilisateur depuis le 
+                            <!-- AJOUTÉES : DATES DE CRÉATIONS ET MISE À JOUR -->
+                            {% if user.freshDate is null %}
+                                {{ user.createdAt|date('d/m/Y')|raw }}</p>
+                            {% else %}
+                                {{ user.freshDate|date('d/m/Y')|raw }}</p>
+                            {% endif %}
+                            </td>
+                        {% else %}
+                            <td>Administrateur depuis le
+                            {% if user.freshDate is null %}
+                                {{ user.createdAt|date('d/m/Y')|raw }}</p>
+                            {% else %}
+                                {{ user.freshDate|date('d/m/Y')|raw }}</p>
+                            {% endif %}
+                            
+                            </td>
+                        {% endif %}
+
                         <td>{{ user.email }}</td>
+
                         <td>
-                            <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Edit</a>
+                            <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Editer</a>
+                            <a href="{{ path('user_delete', {'id' : user.id}) }}" class="btn btn-danger btn-sm" onclick="return(confirm('Validez-vous ce choix ?'));">Supprimer</a>
                         </td>
                     </tr>
+                    {% endif %}
                 {% endfor %}
                 </tbody>
             </table>
         </div>
-    {% endif %} #}
+    {% endif %}
 {% endblock %}
