--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,14 +1,23 @@
 {% extends 'base.html.twig' %}
 
 {% block header_title %}
-    <h1 class="center-box special-title">Bienvenue sur Todo List, l'application vous permettant de gérer l'ensemble de vos tâches sans effort !</h1>
+
+    <h1 class="center-box special-title mt-2 mb-4">
+    Bienvenue sur Todo List, l'application vous permettant de gérer l'ensemble de vos tâches sans effort !
+    </h1>
+    
 {% endblock %}
 
 {% block body %}
 
-    <div class="row center-box">
-        <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
-        <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
-        <a href="{{ path('task_done') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+    <div class="center-box">
+
+        <a href="{{ path('task_create') }}" class="btn btn-success home-task-button">Nouvelle tâche</a>
+
+        <a href="{{ path('task_list') }}" class="btn btn-primary home-task-button">Liste des tâches</a>
+
+        <a href="{{ path('task_done') }}" class="btn btn-secondary home-task-button">Tâches terminées</a>
+
     </div>
+
 {% endblock %}
