--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -1,13 +1,21 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Modifier une tâche{% endblock %}
+
 {% block header_img %}{% endblock %}
 
 {% block body %}
+
     <div class="row center-box">
+
         {{ form_start(form, {'action' : path('task_edit', { 'id' : task.id })}) }}
+
             {{ form_widget(form) }}
 
             <button type="submit" class="btn btn-success">Modifier</button>
+
         {{ form_end(form) }}
+
     </div>
+
 {% endblock %}
