--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -1,14 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block header_title %}<h1 class="center-box special-title">Créer un utilisateur</h1>{% endblock %}
+{% block title %}Créer un utilisateur{% endblock %}
+
+{% block header_title %}
+
+<h1 class="center-box special-title mt-2">Créer un utilisateur</h1>
+
+{% endblock %}
+
 {% block header_img %}{% endblock %}
 
 {% block body %}
+
     <div class="row center-box">
+
         {{ form_start(form, {'action' : path('user_create')}) }}
+
             {{ form_widget(form) }}
 
             <button type="submit" class="btn btn-success">Ajouter</button>
+
         {{ form_end(form) }}
+
     </div>
+    
 {% endblock %}
