--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -1,27 +1,49 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Liste des utilisateurs{% endblock %}
+
 {% block header_img %}{% endblock %}
 
-{% block header_title %}<h1 class="special-title">Liste des utilisateurs</h1>{% endblock %}
+{% block header_title %}
+
+<h1 class="special-title mt-2">Liste des utilisateurs</h1>
+
+{% endblock %}
 
 {% block body %}
+
     {% if users|length == 0 %}
+
         <div class="alert alert-warning" role="alert">
-            Il n'y a pas encore d'utilisateur enregistré. <a href="{{ path('user_create') }}" class="btn btn-warning pull-right">Créer un utilisateur</a>
+
+            <p>Il n'y a pas encore d'utilisateur enregistré. <a href="{{ path('user_create') }}" class="btn btn-warning pull-right">Créer un utilisateur</a></p>
+
         </div>
+
     {% else %}
+
         <div class="row">
+
             <table class="table">
+
                 <thead>
-                <tr>
-                    {# <th>#</th> #}
-                    <th>Nom d'utilisateur</th>
-                    <th>Rôle</th>
-                    <th>Adresse mail</th>
-                    <th>Actions</th>
-                </tr>
+
+                    <tr>
+                        {# <th>#</th> #}
+                        <th>Nom d'utilisateur</th>
+
+                        <th>Rôle</th>
+
+                        <th>Adresse mail</th>
+
+                        <th>Actions</th>
+
+                    </tr>
+
                 </thead>
+
                 <tbody>
+
                 {% for user in users %}
                     <!-- AJOUTÉ : EMPÊCHE L'ACCÈS AUX MODIFICATIONS DE L'UTILISATEUR ANONYME + DU MANAGER AVEC LE ROLE_SUPER_ADMIN + DU MEMBRE CONNECTÉ (QUI NE PEUT PAS MODIFIER SON PROPRE COMPTE) -->
                     {% if (user.role != 'ROLE_SUPER_ADMIN') and (user.id != 2) and (app.user.id != user.id) %}
@@ -31,36 +53,68 @@
                         
                         <!-- AJOUTÉ : INFORMATIONS SUR LES RÔLES -->
                         {% if user.role == 'ROLE_USER' %}
-                            <td>Utilisateur depuis le 
-                            <!-- AJOUTÉES : DATES DE CRÉATIONS ET MISE À JOUR -->
-                            {% if user.freshDate is null %}
-                                {{ user.createdAt|date('d/m/Y')|raw }}</p>
-                            {% else %}
-                                {{ user.freshDate|date('d/m/Y')|raw }}</p>
-                            {% endif %}
+
+                            <td>
+                                <p>Utilisateur depuis le 
+                                <!-- AJOUTÉES : DATES DE CRÉATIONS ET MISE À JOUR -->
+                                {% if user.freshDate is null %}
+
+                                    {{ user.createdAt|date('d/m/Y')|raw }}
+
+                                {% else %}
+
+                                    {{ user.freshDate|date('d/m/Y')|raw }}
+
+                                {% endif %}
+
+                                </p>
+
                             </td>
+
                         {% else %}
-                            <td>Administrateur depuis le
-                            {% if user.freshDate is null %}
-                                {{ user.createdAt|date('d/m/Y')|raw }}</p>
-                            {% else %}
-                                {{ user.freshDate|date('d/m/Y')|raw }}</p>
-                            {% endif %}
+
+                            <td>
+
+                                <p>Administrateur depuis le
+
+                                {% if user.freshDate is null %}
+
+                                    {{ user.createdAt|date('d/m/Y')|raw }}
+
+                                {% else %}
+
+                                    {{ user.freshDate|date('d/m/Y')|raw }}
+
+                                {% endif %}
+
+                                </p>
                             
                             </td>
+
                         {% endif %}
 
                         <td>{{ user.email }}</td>
 
                         <td>
+
                             <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Editer</a>
+
                             <a href="{{ path('user_delete', {'id' : user.id}) }}" class="btn btn-danger btn-sm" onclick="return(confirm('Validez-vous ce choix ?'));">Supprimer</a>
+
                         </td>
+
                     </tr>
+
                     {% endif %}
+
                 {% endfor %}
+
                 </tbody>
+
             </table>
+
         </div>
+
     {% endif %}
+
 {% endblock %}
